alignment fixes and making the textbox nicer

--- a/friends.css
+++ b/friends.css
@@ -161,6 +161,8 @@
      background-color: #c0d5e3;
      width: 520px;
      margin-bottom: -7px;
+     border-top-left-radius: 3px;
+     border-top-right-radius: 3px;
 }
 
 #posting {
@@ -170,15 +172,16 @@
   border-radius: 3px;
   border-color: #c0d5e3;
   border-bottom: none;
+  margin-bottom: 5.5px;
+}
+
+textarea {
+/*    resize: none;
+    padding: 10px;*/
 }
 
  .create-post .form-group {
-    /*margin-bottom: 0;
-    */
-    /* display: inline-block;
-     */
-    /*width: 466px;
-    */
+    margin-bottom: 0;
 }
  .row {
     /*width: 800px;
@@ -199,12 +202,9 @@
  #exampleTextarea {
     min-height: 45px;
     width: 300px;
+    border: none;
 }
 #bPublish{
-}
-
-.create-post {
-    margin-top: 11px;
 }
 
 
@@ -212,6 +212,8 @@
      border: 1px solid #ccc;
      box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
      height: 45px;
+    resize: none;
+    padding: 10px;
 }
  .create-post .form-group img.profile-photo-md {
     /*vertical-align: top;
@@ -219,9 +221,13 @@
 }
  .tools {
      float: right;
-     margin-top: -54px;
-     margin-right: 5px;
+     margin-top: -45px;
 }
+#bPublish {
+    height: 45px;
+}
+
+
  .create-post .tools ul.publishing-tools {
      display: inline-block;
      margin-right: 5px;
@@ -243,24 +249,28 @@
      font-size: 30px;
 }
  #newsFeed {
-     height: 520px;
+     height: 513px;
      width: 520px;
      list-style: none;
      overflow-y: scroll;
      background-color: #c0d5e3;
      border-radius: 3px;
      border: 10px solid #c0d5e3;
-     margin-top: -7px;
+     border-top: 0px;
 }
  .newsFeedListItem {
      padding: 5px;
-     margin-bottom: 15px;
+     margin-bottom: 10px;
      border-radius: 3px;
      border-color: #c0d5e3;
      border-width: 3px;
      min-height: 45px;
      background-color: white;
      font-size: 18px;
+}
+
+.lastItem {
+    margin-bottom: 0px;
 }
 
  .news-feed-image {
